src/objects/Product_Lines__c.object
<CustomObject>
    <description>R5 - New Custom Object - Product Lines</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Master-Detail Relationship to Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup to product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Product_Check__c</fullName>
        <description>R5 Duplicate check in Product Lines and Contact</description>
        <label>Unique Product Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Focus</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PROD-LINE-{0000}</displayFormat>
        <label>Product Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Focus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>